# Projeto-IACD-2025-2026

./: README.md  analysis.ipynb  eda.ipynb  main.py  pyproject.toml
data/: diets.csv  nutritionists.csv  outcomes.csv  patients.csv
src/functions/: __init__.py  data_processing.py  read_data.py
