[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projeto_iacd"
version = "0.1.0"
description = "Projeto de Elementos de IACD - Ano Letivo 25/26"
authors = [
    {name = "Caio Santos"},
    {name = "Eva Trindade"},
    {name = "Gonçalo Libânio"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT" }

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]